--- a/package.json
+++ b/package.json
@@ -14,8 +14,15 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-radio-group": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
+    "@reown/appkit": "^1.6.4",
+    "@reown/appkit-adapter-wagmi": "^1.6.4",
+    "@tanstack/react-query": "^5.64.2",
+    "@wagmi/connectors": "^5.7.4",
+    "@wagmi/core": "^2.16.3",
+    "@web3modal/wagmi": "^5.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "ethers": "^5.7.2",
     "lucide-react": "^0.471.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
@@ -24,6 +31,8 @@
     "react-router-dom": "^7.1.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "viem": "^2.22.10",
+    "wagmi": "^2.14.8",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
